--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>JS Bin</title>
+        <title>Dungeon's Heroes</title>
         <script src="/socket.io/socket.io.js"></script>         
         <link rel="stylesheet" href="/css/style.css">
     </head>
