--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,11 +26,11 @@
     <video id="video2" width="300" height="300" autoplay="autoplay" class="mx-auto d-block"></video>
 
 </body>        
-    <script type="module" src="/js/socketsHandler.js" />
-    <script type="module" src="/js/graphics.js"></script>  
-    <script type="module" src="/js/map.js"></script>        
-    <script type="module" src="/js/player.js"></script>  
+    <script type="module" src="/js/network/socketsHandler.js" />
+    <script type="module" src="/js/graphics/graphics.js"></script>  
+    <script type="module" src="/js/network/map.js"></script>        
+    <script type="module" src="/js/entity/player.js"></script>  
     <script type="module" src="/js/game.js"></script>  
-    <script type="module" src="/js/chat.js"></script>  
+    <script type="module" src="/js/network/chat.js"></script>  
 </html>
 
