fix bug sound #20

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,7 +26,7 @@
 
     <video id="video" width="300" height="300" autoplay="autoplay" class="mx-auto d-block"></video>
     <video id="video2" width="300" height="300" autoplay="autoplay" class="mx-auto d-block"></video>
-    <audio src="media/sound/theme.mp3" id="theme"></audio>
+    <audio src="media/sound/theme.mp3" id="theme"/>
 </body>
 <script type="module" src="/js/network/socketsHandler.js" />
 <script type="module" src="/js/graphics/graphics.js"></script>
