adding a torch on the map

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+    <p>Activez le son et touchez la lampe !</p>
     <canvas id="Canvas" height="896" width="640"></canvas>
 
     <div id="chat">
