--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <p>Activez le son et touchez la lampe !</p>
+    <p>Si votre équipier est mort, vous pouvez le faire revivre en appuyant sur 'a' </p>
     <canvas id="Canvas" height="896" width="640"></canvas>
 
     <div id="chat">
